[gd_scene load_steps=13 format=2]

[ext_resource path="res://farmingTilesheetComplete.png" type="Texture" id=1]
[ext_resource path="res://Scripts/shop.gd" type="Script" id=2]
[ext_resource path="res://Scenes/onion_seedpack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/shop_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/carrot_seedpack.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/berry_seedpack.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 174, 34, 29 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 11.5 )

[sub_resource type="CircleShape2D" id=6]

[node name="shop" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="worker" type="AnimatedSprite" parent="."]
position = Vector2( -1, 6 )
frames = SubResource( 2 )

[node name="shopart" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3.5 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 14 )
shape = SubResource( 6 )

[node name="berry_seedpack" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 26, 5 )

[node name="carrot_seedpack" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 26, 5 )

[node name="onion_seedpack" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 26, 5 )

[node name="shop_menu" parent="." instance=ExtResource( 4 )]
position = Vector2( -89, -12 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
